2001-09-22  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/Config.pm.in: Strange construct was causing bug. Fixed
	now. (Seems to be related to how -i was supposed to catch -I. Or not
	catch it, as the case seemed)
	* Netcomics/HTML/Page.pm (generate): Fixed REALLY DUMB bug screwing
	up URLs.
	* AUTHORS: Corrected email address.
	* debian/changelog: Corrected email address.
	* INSTALL: Updated Debian build instructions.
	* NEWS: Updated the news.

2001-09-20  Elliot Glaysher  <glaysher@umich.edu>

	* lib/doemain: Updated and corrected.
	* Netcomics/Factory.pm (get_comics): Check to see if "dummy" was 
	returned.	
	* Netcomics/HTML.pm (create_archive_webpages): Check to make sure
	$rli->{'proc'} is defined before trying to operate on it.
	* TODO: Updated so things done are now "done".

2001-09-19  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Themes/Default.pm: Updated so it makes prettier
	HTML.

2001-09-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/ExternalUserAgent.pm (request): Made it so that the
	proxy is set using the env command if the external http client
	program commandline string doesn't include %P.
	* Netcomics/Config.pm.in: Fixed HTML/Themes dir name so that it
	would be replaced properly by the Makefile.
	* Makefile.PL (SUBPATHS): Updated paths to new ones set in
	Config.pm.in.
	* netcomics.spec (%files): Updated paths to new ones set in
	Config.pm.in.
	* doc/netcomics.pod: Updated paths to new ones set in
	Config.pm.in. Added clarification on how the proxy is used.
	Fixed unquoted commandline switches causing pod2html errors.
	* netcomicsrc: Updated paths to new ones set in Config.pm.in.
	Added clarification on how the proxy is used.
	* MANIFEST: removed angst; added inktank and mrlowe.
	* Makefile.PL (@modules): moved angst to @oldmodules; added
	inktank and mrlowe.

2001-09-18  Elliot Glaysher  <glaysher@umich.edu>

	* netcomics: Added changable theme support.